# ResumeForgeLint

./: .coverage  .firebaserc  .gitignore  LICENSE  README.md  pyproject.toml
.firebase/: hosting.aG9zdGluZw.cache
.github/workflows/: publish.yml  python-app.yml
docs/: fidelity-test-plan.md
examples/: bad_all.txt  bad_education.txt  bad_experience.txt  bad_header.txt  bad_skills.txt  good_header.txt  header_only.txt  needs_work.txt  no_header.txt  with_optional_sections.txt
hosting/: 404.html  index.html
scripts/: fidelity_test.py
src/resumeforgelint/: cli.py  models.py
src/resumeforgelint/parser/: section_parser.py
src/resumeforgelint/render/: output_template_v1.py  renderer.py  template_engine.py
src/resumeforgelint/scorer/: __init__.py  education_rubrics.py  header_rubrics.py  score_header.py  scorer.py  skills_rubrics.py  work_experience_rubrics.py
tests/: test_cli.py  test_fidelity.py
tests/resumeforgelint/parser/: test_section_parser.py
tests/resumeforgelint/render/: test_output_template_v1.py  test_renderer.py  test_template_engine.py
tests/resumeforgelint/scorer/: test_education_rubrics.py  test_header_rubrics.py  test_score_header.py  test_scorer.py  test_skills_rubrics.py  test_work_experience_rubrics.py
