[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resumeforgelint"
version = "0.1.0"
description = "Simple ATS Resume/C.V validation tool"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
resumeforgelint = "resumeforgelint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
