[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resumeforgelint"
version = "0.1.1"
description = "Simple ATS Resume/C.V validation tool"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = []

[project.urls]
Homepage = "https://resume-forge-lint.web.app/"
Repository = "https://github.com/JohnStrong/ResumeForgeLint"
Documentation = "https://resume-forge-lint.web.app/"

[project.scripts]
resumeforgelint = "resumeforgelint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "fidelity_tests"]
